--- a/BankingApp/BankingApp/BankingApp.csproj
+++ b/BankingApp/BankingApp/BankingApp.csproj
@@ -7,4 +7,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Faker.Net" Version="2.0.163" />
+  </ItemGroup>
+
 </Project>
